# metahackrepo

./: .dockerignore  .gitignore  BLOG_POST.md  CODEBASE_CONTEXT_FOR_AI.md  CodeOrganismVM_Complete_Spec.docx  CodeOrganismVM_Training.ipynb  DEMO_PITCH_SLIDES.md  Dockerfile  GEMINI.md  HACKATHON_WINNING_ROADMAP.md  IMPLEMENTATION_GAP_CHECKLIST.md  README.md  REPO_ENGINEERING_DOSSIER.md  SUBMISSION_HF_SPACE.md  TECHNICAL_WHITEPAPER.md  Untitled20.ipynb  VIDEO_DEMO_SCRIPT.md  app.py  audit_report.md  baseline.py  client.py  co-env-expert.skill  co-qa-expert.skill  co-training-expert.skill  data.py  debug_reset.py  environment.py  gym_wrapper.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements-training-win311.txt  requirements-training.txt  requirements.txt  rubrics.py  session_runtime.py  spec_text.txt  tasks.py  test_api.py  (+3 more)
.github/hf-space/: README.md
.github/workflows/: ci.yml  deploy-hf-space.yml  upload-hf-artifacts.yml
evaluation/: held_out_seeds.json  report.md  run_eval.py
experiments/run_20260425_214138/: notes.json
experiments/run_20260425_221115_win311/: notes.json
results/: README.md  grpo_gpu_recipe.json  heuristic_rollouts.jsonl  hf_jobs_launch_command.txt  noop_rollouts.jsonl  notebook_training_metrics.json  random_rollouts.jsonl  sft_rollouts.jsonl  stabilized_rollouts.jsonl  training_run_summary.json
scripts/: check_local_lora_compute.py  final_pipeline_check.py  import_lora_bundle.py  publish_lora_artifacts.py  run_local_baseline_win311.ps1  run_local_baseline_win312.ps1  run_lora_inference_smoke.py  submission_preflight.py
server/: Dockerfile  app.py
sre_platform/: __init__.py  routes.py  services.py  state.py  step_executor.py
training/: GRPO_GPU_RUNBOOK.md  HF_HIGH_ACCURACY_RL_PROGRAM.md  curriculum.py  evaluate_policy.py  extract_notebook_training.py  generate_sft_data.py  grpo_train.py  lightning_a100_run.sh  plot_results.py  rollout.py  sft_data.jsonl  train_sft.py
(+18 files in other folders)
