[project]
name = "shadow-council"
version = "1.0.0"
description = "OpenEnv environment for AI oversight and collusion detection"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "pydantic==2.10.4",
    "openai==1.58.1",
    "requests==2.32.3",
    "pyyaml==6.0.2",
    "pytest==8.3.4",
    "openenv-core>=0.1.0",
    "gradio>=4.0.0",
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
