[project]
name = "autonomous-sre"
version = "1.0.0"
description = "OpenEnv environment for autonomous SRE remediation in a self-corrupting code sandbox"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.121.1",
    "uvicorn[standard]==0.34.0",
    "pydantic==2.10.4",
    "openai==1.58.1",
    "requests==2.33.0",
    "pyyaml==6.0.2",
    "pytest==9.0.3",
    "openenv-core>=0.1.0",
    "gradio==6.7.0",
    "networkx==3.5",
    "numpy==2.2.6",
    "gymnasium==1.1.1",
    "starlette==0.49.1",
]

[project.optional-dependencies]
training = [
    "trl==0.11.0",
    "transformers==4.49.0",
    "datasets==3.2.0",
    "accelerate==1.2.1",
    "torch==2.5.1",
    "unsloth==2025.3.19",
    "bitsandbytes==0.45.0",
    "peft==0.14.0",
    "huggingface_hub==0.27.1",
]

[project.scripts]
server = "server.app:main"

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
norecursedirs = [
    ".git",
    ".pytest_cache",
    "__pycache__",
    "tmp_pytest",
    "build",
    "dist",
]
testpaths = [
    "test_env.py",
    "test_api.py",
]

[tool.ruff]
line-length = 120
exclude = [
    ".git",
    ".venv*",
    "__pycache__",
    "build",
    "dist",
    "*.ipynb",
    "bundle_extract",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
